--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -13,31 +13,29 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    services:
-      mysql:
-        image: mysql:8.0.33
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: rails_test
-        ports:
-        - 3306:3306
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 3.2.2
-        bundler-cache: true
 
-    - name: Set up database
+    - name: Cache Bundler
+      uses: actions/cache@v2
+      with:
+        path: vendor/bundle
+        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-gems-
+
+    - name: Bundle install
       run: |
-        sudo apt-get install libmysqlclient-dev
-        cp config/database.ci.yml config/database.yml
-        bundle exec rake db:create
-        bundle exec rake db:schema:load
+        bundle config path vendor/bundle
+        bundle install --jobs 4 --retry 3
+
+    - name: Setup Database
+      run: bundle exec rake db:create db:schema:load
 
     - name: Run RSpec
       run: bundle exec rspec
