--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -17,7 +17,8 @@ jobs:
       db:
         image: mysql:5.7
         env:
-          MYSQL_ROOT_PASSWORD: password
+          DEFAULT_USERNAME: root
+          DEFAULT_PASSWORD: password
         ports:
           - 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=5
