--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -17,11 +17,11 @@ jobs:
       db:
         image: mysql:5.7
         env:
-          DEFAULT_USERNAME: root
-          DEFAULT_PASSWORD: password
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: api_development
         ports:
           - 3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=5
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=5    
 
     steps:
     - uses: actions/checkout@v2
