--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -45,7 +45,7 @@ jobs:
         bundle install --jobs 4 --retry 3
 
     - name: Setup Database
-      run: bundle exec rake db:create db:schema:load
+      run: rails db:create db:migrate
 
     - name: Run RSpec
       run: bundle exec rspec
