--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -60,5 +60,6 @@ group :development do
   gem "rubocop-performance", require: false
   gem "rubocop-rails", require: false
   gem "rubocop-rspec", require: false
+  gem "rubocop-discourse", require: false
 end
 
