--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -55,10 +55,6 @@ jobs:
   rubocop:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    defaults:
-      run:
-        working-directory: backend
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -66,13 +62,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.2.2
-
-      - name: Install dependencies
-        run: |
-          gem install bundler
-          bundle config set --local path 'vendor/bundle'
-          bundle install --jobs 4 --retry 3
+          bundler-cache: true
 
       - name: Run rubocop
         run: bundle exec rubocop
