--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          bundler-cache: true
+          ruby-version: 3.2.2
 
       - name: Run rubocop
         run: bundle exec rubocop
