--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -64,5 +64,11 @@ jobs:
         with:
           ruby-version: 3.2.2
 
+      - name: Bundler and gem install
+        run: |
+          gem install bundler
+          bundle config set --local path 'vendor/bundle'
+          bundle install --jobs 4 --retry 3
+
       - name: Run rubocop
         run: bundle exec rubocop
