--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -65,3 +65,24 @@ jobs:
           bundle install
       - name: Run rubocop
         run: bundle exec rubocop
+
+  deploy:
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.BACKEND_SERVER_SSH_KEY }}
+          known_hosts: ${{ secrets.BACKEND_SERVER_KNOWN_HOSTS }}
+      - run: rsync -auz backend ${SERVER_USER}@${SERVER_IP}:~/srv
+        env:
+          SERVER_USER: ${{ secrets.BACKEND_SERVER_USER}}
+          SERVER_IP: ${{ secrets.BACKEND_SERVER_IP}}
+      - run: ssh ${SERVER_USER}@${SERVER_IP} sudo systemctl restart backend
+        env:
+          SERVER_USER: ${{ secrets.BACKEND_SERVER_USER}}
+          SERVER_IP: ${{ secrets.BACKEND_SERVER_IP}}
+      - run: ssh ${SERVER_USER}@${SERVER_IP} systemctl status backend
+        env:
+          SERVER_USER: ${{ secrets.BACKEND_SERVER_USER}}
+          SERVER_IP: ${{ secrets.BACKEND_SERVER_IP}}
