--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -70,6 +70,8 @@ jobs:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
+      - name: List directory contents
+        run: ls -la
       - uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.BACKEND_SERVER_SSH_KEY }}
