--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -70,8 +70,7 @@ jobs:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
-      - name: List directory contents
-        run: ls -la
+      - uses: actions/checkout@v2
       - uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.BACKEND_SERVER_SSH_KEY }}
