--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -71,19 +71,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+  
       - uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.BACKEND_SERVER_SSH_KEY }}
           known_hosts: ${{ secrets.BACKEND_SERVER_KNOWN_HOSTS }}
-      - run: rsync -auz backend ${SERVER_USER}@${SERVER_IP}:~/srv
+        
+      - name: Deploy code
+        run: rsync -auz ./backend/ ${SERVER_USER}@${SERVER_IP}:~/srv
         env:
-          SERVER_USER: ${{ secrets.BACKEND_SERVER_USER}}
-          SERVER_IP: ${{ secrets.BACKEND_SERVER_IP}}
-      - run: ssh ${SERVER_USER}@${SERVER_IP} sudo systemctl restart backend
+          SERVER_USER: ${{ secrets.BACKEND_SERVER_USER }}
+          SERVER_IP: ${{ secrets.BACKEND_SERVER_IP }}
+        working-directory: .
+  
+      - name: Restart service
+        run: ssh ${SERVER_USER}@${SERVER_IP} sudo systemctl restart backend
         env:
-          SERVER_USER: ${{ secrets.BACKEND_SERVER_USER}}
-          SERVER_IP: ${{ secrets.BACKEND_SERVER_IP}}
-      - run: ssh ${SERVER_USER}@${SERVER_IP} systemctl status backend
+          SERVER_USER: ${{ secrets.BACKEND_SERVER_USER }}
+          SERVER_IP: ${{ secrets.BACKEND_SERVER_IP }}
+        working-directory: .
+  
+      - name: Check service status
+        run: ssh ${SERVER_USER}@${SERVER_IP} systemctl status backend
         env:
-          SERVER_USER: ${{ secrets.BACKEND_SERVER_USER}}
-          SERVER_IP: ${{ secrets.BACKEND_SERVER_IP}}
+          SERVER_USER: ${{ secrets.BACKEND_SERVER_USER }}
+          SERVER_IP: ${{ secrets.BACKEND_SERVER_IP }}
+        working-directory: .
+        
