--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -70,13 +70,15 @@ jobs:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+  
       - uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.BACKEND_SERVER_SSH_KEY }}
           known_hosts: ${{ secrets.BACKEND_SERVER_KNOWN_HOSTS }}
         
       - name: Deploy code
-        run: rsync -auz ./backend/ ${SERVER_USER}@${SERVER_IP}:~/srv
+        run: rsync -auz ./backend/ ${SERVER_USER}@${SERVER_IP}:~/srv/backend/
         env:
           SERVER_USER: ${{ secrets.BACKEND_SERVER_USER }}
           SERVER_IP: ${{ secrets.BACKEND_SERVER_IP }}
