--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -67,7 +67,6 @@ jobs:
         run: bundle exec rubocop
 
   deploy:
-    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -78,7 +77,7 @@ jobs:
           known_hosts: ${{ secrets.BACKEND_SERVER_KNOWN_HOSTS }}
         
       - name: Deploy code
-        run: rsync -auz ./backend/ ${SERVER_USER}@${SERVER_IP}:~/srv/backend/
+        run: rsync -auz ./backend/ ${SERVER_USER}@${SERVER_IP}:~/srv/
         env:
           SERVER_USER: ${{ secrets.BACKEND_SERVER_USER }}
           SERVER_IP: ${{ secrets.BACKEND_SERVER_IP }}
