--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: aws s3 sync . s3://myapp-s3-925rycki --exact-timestamps --region ap-northeast-1
+      - run: aws s3 sync . s3://my-frontend-s3-925rycki --exact-timestamps --region ap-northeast-1
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.FRONTEND_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.FRONTEND_AWS_SECRET_ACCESS_KEY }}
