--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -10,19 +10,12 @@ defaults:
   run:
     working-directory: frontend/app/build
 
-permissions:
-  id-token: write
-  contents: read
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - uses: aws-actions/configure-aws-credentials@v2
-        with:
-          role-to-assume: arn:aws:iam::472543654987:role/my-frontend-deployment-role
-          aws-region: ap-northeast-1
-
       - run: aws s3 sync . s3://my-frontend-s3-925rycki --exact-timestamps --region ap-northeast-1
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.FRONTEND_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.FRONTEND_AWS_SECRET_ACCESS_KEY }}
